Ajustes a 2-SISE-COLEGIADO

--- a/DocumentosJuzgados.xaml
+++ b/DocumentosJuzgados.xaml
@@ -111,9 +111,12 @@
       <AssemblyReference>PresentationFramework</AssemblyReference>
       <AssemblyReference>WindowsBase</AssemblyReference>
       <AssemblyReference>System.ComponentModel.Primitives</AssemblyReference>
+      <AssemblyReference>System.CodeDom</AssemblyReference>
+      <AssemblyReference>Microsoft.VisualBasic.Forms</AssemblyReference>
+      <AssemblyReference>Microsoft.VisualBasic.Core</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="RemitirColegiado" sap:VirtualizedContainerService.HintSize="1280,2336" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="RemitirColegiado" sap:VirtualizedContainerService.HintSize="1188,2336" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -145,7 +148,7 @@
                 <OutArgument x:TypeArguments="x:String">[strPathCopia]</OutArgument>
               </ui:AssignOperation.To>
               <ui:AssignOperation.Value>
-                <InArgument x:TypeArguments="x:String">["C:\AFA\" &amp; strPlantilla.Split(" ")(0) &amp; "" &amp; strNumJuzgado &amp; strExpediente.Replace("/", "") &amp; ".docx"]</InArgument>
+                <InArgument x:TypeArguments="x:String" xml:space="preserve">["C:\AFA\" &amp; strPlantilla.Split(" ")(0) &amp; "" &amp; Now.ToString("yyyyMMdd_HHmmss") &amp;  strNumJuzgado &amp; strExpediente.Replace("/", "")  &amp; ".docx"]</InArgument>
               </ui:AssignOperation.Value>
             </ui:AssignOperation>
             <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_3">
