Ajustes para contemplar personas morales

--- a/Flowchart.xaml
+++ b/Flowchart.xaml
@@ -81,7 +81,7 @@
       <AssemblyReference>Microsoft.VisualBasic.Core</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Flowchart DisplayName="Flowchart" sap:VirtualizedContainerService.HintSize="1155,669" sap2010:WorkflowViewState.IdRef="Flowchart_1">
+  <Flowchart DisplayName="Flowchart" sap:VirtualizedContainerService.HintSize="1247,674" sap2010:WorkflowViewState.IdRef="Flowchart_1">
     <Flowchart.Variables>
       <Variable x:TypeArguments="x:String" Name="strArchivoDispatcher" />
       <Variable x:TypeArguments="x:String" Name="strRutaArchivos" />
@@ -95,7 +95,7 @@
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <Flowchart.StartNode>
-      <x:Reference>__ReferenceID4</x:Reference>
+      <x:Reference>__ReferenceID5</x:Reference>
     </Flowchart.StartNode>
     <FlowStep x:Name="__ReferenceID0" sap2010:WorkflowViewState.IdRef="FlowStep_2">
       <sap:WorkflowViewStateService.ViewState>
@@ -104,7 +104,7 @@
           <av:Size x:Key="ShapeSize">110,70</av:Size>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="0-PJF-DocUndstd" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="0-PJF-DOCUMENTOS OBTENCION-ANALISIS.xaml">
+      <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="0-PJF-DocUndstd" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="0-PJF-DOCUMENTOS OBTENCION-ANALISIS-FISICAS.xaml">
         <ui:InvokeWorkflowFile.Arguments>
           <InArgument x:TypeArguments="x:String" x:Key="inRutaArchivos">[strRutaArchivos]</InArgument>
           <InArgument x:TypeArguments="x:String" x:Key="inArchivoDispatcher">[strArchivoDispatcher]</InArgument>
@@ -150,7 +150,7 @@
         </FlowStep>
       </FlowStep.Next>
     </FlowStep>
-    <FlowStep x:Name="__ReferenceID4" sap2010:WorkflowViewState.IdRef="FlowStep_1">
+    <FlowStep x:Name="__ReferenceID5" sap2010:WorkflowViewState.IdRef="FlowStep_1">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <av:Point x:Key="ShapeLocation">565,115</av:Point>
@@ -172,22 +172,36 @@
               <av:Size x:Key="ShapeSize">60,60</av:Size>
               <av:PointCollection x:Key="MondayConnector">590,250 560,250 560,204.99999999999997 320,204.99999999999997 320,235</av:PointCollection>
               <av:PointCollection x:Key="TuesdayConnector">650,250 680,250 680,204.99999999999997 890,204.99999999999997 890,235</av:PointCollection>
-              <av:PointCollection x:Key="WednesdayConnector">590,250 560,250 560,270 375,270</av:PointCollection>
+              <av:PointCollection x:Key="WednesdayConnector">590,250 560,250 560,135 200,135 200,165</av:PointCollection>
               <av:PointCollection x:Key="FridayConnector">590,250 560,250 560,335 320,335 320,305</av:PointCollection>
               <av:PointCollection x:Key="SaturdayConnector">650,250 680,250 680,335 890,335 890,305</av:PointCollection>
               <av:PointCollection x:Key="ThursdayConnector">650,250 680,250 680,270 835,270</av:PointCollection>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <x:Reference>__ReferenceID0<x:Key>Monday</x:Key></x:Reference>
           <x:Reference>__ReferenceID0<x:Key>Friday</x:Key></x:Reference>
-          <x:Reference>__ReferenceID0<x:Key>Wednesday</x:Key></x:Reference>
           <x:Reference>__ReferenceID1<x:Key>Tuesday</x:Key></x:Reference>
           <x:Reference>__ReferenceID1<x:Key>Thursday</x:Key></x:Reference>
           <x:Reference>__ReferenceID1<x:Key>Saturday</x:Key></x:Reference>
+          <x:Reference>__ReferenceID0<x:Key>Monday</x:Key></x:Reference>
+          <FlowStep x:Key="Wednesday" x:Name="__ReferenceID4" sap2010:WorkflowViewState.IdRef="FlowStep_1">
+            <sap:WorkflowViewStateService.ViewState>
+              <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                <av:Point x:Key="ShapeLocation">145,165</av:Point>
+                <av:Size x:Key="ShapeSize">110,70</av:Size>
+              </scg:Dictionary>
+            </sap:WorkflowViewStateService.ViewState>
+            <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="0-PJF-PERSONAS MORALES - Invoke Workflow File (0-PJF-PERSONAS MORALES.xaml)" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_6" UnSafe="False" WorkflowFileName="0-PJF-PERSONAS MORALES.xaml">
+              <ui:InvokeWorkflowFile.Arguments>
+                <InArgument x:TypeArguments="x:String" x:Key="inRutaArchivos">[strRutaArchivos]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="inArchivoDispatcher">[strArchivoDispatcher]</InArgument>
+              </ui:InvokeWorkflowFile.Arguments>
+            </ui:InvokeWorkflowFile>
+          </FlowStep>
         </FlowSwitch>
       </FlowStep.Next>
     </FlowStep>
     <x:Reference>__ReferenceID2</x:Reference>
     <x:Reference>__ReferenceID3</x:Reference>
+    <x:Reference>__ReferenceID4</x:Reference>
   </Flowchart>
 </Activity>
